# mcp-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  transport.rs  types.rs
