[package]
name = "mcp-sdk"
version = "0.2.0"
edition = "2021"
description = "A lightweight Rust implementation of the Model Context Protocol (MCP) using JSON-RPC"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1.0", features = ["io-util", "process", "rt", "sync"] } # Minimal features for Stdio

# Utilities
tracing = "0.1" # For debug visibility if needed
